--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
       <li class="bold"><a aria-label="Navigate to the Experience section" href="#experience" class="waves-effect waves-dark cyan-text"><i class="mdi-action-trending-up small"></i><span>Experience</span></a></li>
       <li class="bold"><a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark indigo-text"><i class="mdi-av-web small"></i><span>Projects</span></a></li>
       <li class="bold"><a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark purple-text"><i class="mdi-av-equalizer small"></i><span>Skills</span></a></li>
-      <li class="bold"><a aria-label="Navigate to the Awards section" href="#awards" class="waves-effect waves-dark red-text"><i class="mdi-action-grade small"></i><span>Awards</span></a></li>
       <li class="bold"><a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark orange-text"><i class="mdi-social-school small"></i><span>Education</span></a></li>
       <li class="bold"><a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark brown-text"><i class="mdi-content-mail small"></i><span>Contact</span></a></li>
+      <li class="bold"><a aria-label="Navigate to the Awards section" href="#awards" class="waves-effect waves-dark red-text"><i class="mdi-action-grade small"></i><span>Awards</span></a></li>
       <li class="bold"><a aria-label="Open Rohit's Resume in a new tab" href="https://docs.google.com/document/d/1NI86TlbkSnAzD_Vk56pMXaL2gdl95Vd9dAkSbokLcCU/edit?usp=sharing" target="_blank" class="waves-effect waves-dark grey-text text-darken-3"><i class="mdi-action-description small"></i><span>Resume</span></a></li>
     </ul>
   </nav>
@@ -151,12 +151,28 @@
               </div>
             </div>
             <div class="role brown-text">Full Stack Web Development</div>
-            <p><em class="grey-text">Dummy text</em></p>
+            <p><em class="grey-text">13-Week Full Stack Javascript programming and a hacker is born!</em></p>
             <h6>Curriculum</h6>
             <ul>
+              <li>Setting up Dev Environment</li>
+              <li>Linux, Shell Scripting, Cron Jobs</li>
+              <li>HTML5, CSS3, and jQuery</li>
+              <li>Object Oriented Programming</li>
+              <li>Data Structure And Algos</li>
+              <li>Debugging</li>
+              <li>Setting up GIT, GITHUB, SSH</li>
+              <li>Node.js Packages</li>
+              <li>ReactJs, Express.js and MongoDb</li>
+              <li>Planning/Creating Wireframes and Schemas</li>
+              <li>Agile Software Development Life Cycle</li>
+              <li>Creating REST API</li>
+              <li>UI/UX Designing</li>
+              <li>Cloud Computing</li>
 
             </ul>
-            <h6>Accomplishments</h6>
+            <h6>Projects</h6>
+            <li> <a href="">Crud Application</a></li>
+            <li><a href="">React Crud Application</a></li>
             <ul>
 
             </ul>
@@ -374,6 +390,9 @@
               <div class="col s4 m2"><img alt="" src="static/img/heroku.png" class="responsive-img">Heroku</div>
               <div class="col s4 m2"><img alt="" src="static/img/aws.png" class="responsive-img">AWS</div>
               <div class="col s4 m2"><img alt="" src="static/img/google-cloud.png" class="responsive-img">Google Cloud</div>
+              <div class="col s4 m2"><img alt="" src="static/img/slack.png" class="responsive-img">Slack</div>
+              <div class="col s4 m2"><img alt="" src="static/img/trello.png" class="responsive-img">Trello</div>
+
             </div>
           </div>
         </div>
