--- a/index.html
+++ b/index.html
@@ -170,9 +170,20 @@
               <li>Cloud Computing</li>
 
             </ul>
-            <h6>Projects</h6>
-            <li> <a href="">Crud Application</a></li>
-            <li><a href="">React Crud Application</a></li>
+            <h6>Recent Projects</h6>
+            <li> <a href="https://github.com/RohitoOo/Music-Playlist-Crud-App">Crud Application</a></li>
+            <li><a href="https://github.com/RohitoOo/React_Portfolio">React Portfolio Page</a></li>
+            <li> <a href="https://github.com/RohitoOo/Crud_WebApplication">Crud Application</a></li>
+            <li><a href="https://github.com/RohitoOo/ReactJs_ToDoApp">React To Do List</a></li>
+            <li><a href="https://github.com/RohitoOo/React_Project_3">React Group Project</a></li>
+            <li><a href="https://github.com/RohitoOo/Swaggy">Food Delivery Group Project</a></li>
+            <li><a href="https://github.com/RohitoOo/PhotoShop_To_HTML">PhotoShop To HTML</a></li>
+
+
+
+
+
+
             <ul>
 
             </ul>
