--- a/index.html
+++ b/index.html
@@ -178,12 +178,6 @@
             <li><a href="https://github.com/RohitoOo/React_Project_3">React Group Project</a></li>
             <li><a href="https://github.com/RohitoOo/Swaggy">Food Delivery Group Project</a></li>
             <li><a href="https://github.com/RohitoOo/PhotoShop_To_HTML">PhotoShop To HTML</a></li>
-
-
-
-
-
-
             <ul>
 
             </ul>
@@ -200,10 +194,14 @@
               </div>
             </div>
             <div class="role brown-text">Business Development | Logistics Coordinator</div>
-            <p><em class="grey-text">dummy text</em></p>
-            <h6>Develop Product</h6>
+            <p><em class="grey-text">TFI International Inc. is a Canadian transport and logistics company based in Montreal, Quebec. It operates across Canada through 4 business segments, and in the United States. It has Canada's largest LTL business, largest trucking fleet and ranked top 5 in terms of revenue among North American LTL carriers . Its trucking fleet consists of ~6700 power units and ~12000 trailers.</em></p>
+            <h6>Responsibilities</h6>
             <ul>
-
+            <li>Meticulously create, update, analyze and monitor daily logistics reports for Samsung and Saputo Dairy Products.</li>
+            <li>Communicate information with all stakeholders to ensure desired logistics objectives, priorities and schedules are met.</li>
+            <li>Obtain rate quotes and negotiate terms with freight forwarders and 3rd party freight brokers. </li>
+            <li>Coordinate daily driver runs within Ontario using IBM's AS400.</li>
+            <li>Communicate with customs brokers, clients and shippers to facilitate smooth movement across the international borders.</li>
             </ul>
             <h6>Accomplishments</h6>
             <ul>
@@ -215,15 +213,19 @@
         <div class="card">
           <div class="card-content">
             <div class="row">
-              <div class="col s12 m2"><a href="http://www.transgroup.com/" target="_blank"><img alt="TransGroup Global Logistcs" src="static/img/transgroup.png" class="responsive-img center-block"></a></div>
+              <div class="col s12 m2"><a href="http://www.transgroup.com/technology.aspx" target="_blank"><img alt="TransGroup Worldwide Logistcs" src="static/img/transgroup.png" class="responsive-img center-block"></a></div>
               <div class="col s12 m10">
                 <p><span class="card-title"><a href="http://www.transgroup.com/" target="_blank" class="teal-text hoverline">TransGroup Global Logistcs</a></span></p>
               </div>
             </div>
             <div class="role brown-text">Logistics Coordinator</div>
-            <p><em class="grey-text"></em></p>
+            <p><em class="grey-text"> TransGroup Global Logistics was founded with a single mission – to be the Future of Transport Logistics by bringing tomorrow’s supply chain technologies and best practices to their customers today. They are dedicated to developing the most advanced and flexible logistics software tools available.</em></p>
+            <h6>Responsibilities</h6>
             <ul>
-
+            <li>Refined and executed prearranged strategy with clients, maintained ongoing communication and facilitated solutions to address their individual logistics concerns.</li>
+            <li>Negotiated rate quotes with 3rd party carriers. (LTL and Truckloads)</li>
+            <li>Coordinated supply chain projects within Canada.</li>
+            <li>Worked with 3PL (3rd Party Logistics) clients to fulfill storage and distribution needs across Canada in a timely fashion.</li>
             </ul>
           </div>
           <div class="card-action"><span>Nov 2012 - Feb 2014 | Toronto, ON</span></div>
@@ -237,11 +239,15 @@
               </div>
             </div>
             <div class="role brown-text">Book Keeper | Business Development</div>
-            <p><em class="grey-text"></em></p>
+            <p><em class="grey-text"> Classique Canada specializes in the Creation and Distribution of Canadian Souvenir Products. </em></p>
             <ul>
-
+              <li>Controlled the full cycle accounting duties using Quick books, Microsoft Office (Word, Excel & PowerPoint), Net view (Internal logistics software) and TD Merchant (Banking software). </li>
+              <li>Communicated effectively with the president, third-party logistics Centre, local/international suppliers and store owners (clients). </li>
+              <li>Managed seasonal booth at multiple Convention Centres, across Canada. E.g. CGTA</li>
             </ul>
             <h6>Accomplishments</h6>
+            <li>Single Handly Managed the entire operations, working directly with the Founder and CEO.</li>
+            <li>Achieved and Exceeded yearly target of 1.4 Mil in revenue</li>
             <ul>
 
             </ul>
@@ -261,17 +267,13 @@
             <p><em class="grey-text"></em></p>
             <h6></h6>
             <ul>
-
+              <li>Managed University’s network and security systems for desktops, laptops, printers, and projectors.</li>
+              <li>Worked with professors and students to meet hardware installs and software update needs. </li>
             </ul>
 
           </div>
-          <div class="card-action"><span>Sept 2008 - April 2009  |  Toronto, ON</span></div>
+          <div class="card-action"><span>Sept 2008 - April 2010 | Toronto, ON</span></div>
         </div>
-
-
-
-
-
       </div>
     </section>
 
@@ -287,18 +289,59 @@
           <!-- 1-->
           <div class="col s12 m6 l4">
             <div class="card medium">
-
+                <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/.jpg" class="activator"></div>
+                <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
+                  <p>Music web app to create your favourite music playlist.</p>
+                </div>
+                <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
+                  <ul>
+                    <li><strong>NodeJs ExpressJs</strong> backend</li>
+                      <li><strong>MongoDb Mongoose </strong> database</li>
+                      <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
+                    <li><strong>Client-side rendering</strong> via EJS</li>
+                  </ul>
+                    <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="https://rohito.com/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a><a aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a></div>
+                </div>
             </div>
           </div>
           <!-- 2 -->
           <div class="col s12 m6 l4">
             <div class="card medium">
 
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/.jpg" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
+                <p>Music web app to create your favourite music playlist.</p>
+              </div>
+              <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><strong>NodeJs ExpressJs</strong> backend</li>
+                    <li><strong>MongoDb Mongoose </strong> database</li>
+                    <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
+                  <li><strong>Client-side rendering</strong> via EJS</li>
+                </ul>
+                  <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="https://rohito.com/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a><a aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a></div>
+              </div>
+
+
             </div>
           </div>
           <!-- 3 -->
           <div class="col s12 m6 l4">
             <div class="card medium">
+
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/.jpg" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
+                <p>Music web app to create your favourite music playlist.</p>
+              </div>
+              <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><strong>NodeJs ExpressJs</strong> backend</li>
+                    <li><strong>MongoDb Mongoose </strong> database</li>
+                    <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
+                  <li><strong>Client-side rendering</strong> via EJS</li>
+                </ul>
+                  <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="https://rohito.com/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a><a aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a></div>
+              </div>
 
             </div>
           </div>
@@ -433,7 +476,7 @@
                 <p><span class="card-title"><a href="https://www.cic-totalcare.com/" class="teal-text hoverline">Colombia International College</a></span></p>
                 <p class="brown-text">Hamilton, ON | 2005 - 2007</p>
                 <ul>
-                  <li>High School</li>
+                  <li>High School Diploma</li>
                 </ul>
               </div>
             </div>
