--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
       <li class="bold"><a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark purple-text"><i class="mdi-av-equalizer small"></i><span>Skills</span></a></li>
       <li class="bold"><a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark orange-text"><i class="mdi-social-school small"></i><span>Education</span></a></li>
       <li class="bold"><a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark brown-text"><i class="mdi-content-mail small"></i><span>Contact</span></a></li>
+      <li class="bold"><a aria-label="Navigate to the Photos section" href="#photos" class="waves-effect waves-dark red-text"><i class="mdi-image-photo-camera small"></i><span>Photos</span></a></li>
       <li class="bold"><a aria-label="Open Rohit's resume in a new tab" href="https://docs.google.com/document/d/1NI86TlbkSnAzD_Vk56pMXaL2gdl95Vd9dAkSbokLcCU/edit?usp=sharing" target="_blank" class="waves-effect waves-dark grey-text text-darken-3"><i class="mdi-action-description small"></i><span>Resume</span></a></li>
     </ul>
   </nav>
@@ -110,7 +111,7 @@
       <li class="bold"><a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark purple-text"><i class="mdi-av-equalizer small"></i><span>Skills</span></a></li>
       <li class="bold"><a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark orange-text"><i class="mdi-social-school small"></i><span>Education</span></a></li>
       <li class="bold"><a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark brown-text"><i class="mdi-content-mail small"></i><span>Contact</span></a></li>
-      <li class="bold"><a aria-label="Navigate to the Awards section" href="#awards" class="waves-effect waves-dark red-text"><i class="mdi-action-grade small"></i><span>Awards</span></a></li>
+      <li class="bold"><a aria-label="Navigate to the Photos section" href="#photos" class="waves-effect waves-dark red-text"><i class="mdi-image-photo-camera small"></i><span>Photos</span></a></li>
       <li class="bold"><a aria-label="Open Rohit's Resume in a new tab" href="https://docs.google.com/document/d/1NI86TlbkSnAzD_Vk56pMXaL2gdl95Vd9dAkSbokLcCU/edit?usp=sharing" target="_blank" class="waves-effect waves-dark grey-text text-darken-3"><i class="mdi-action-description small"></i><span>Resume</span></a></li>
     </ul>
   </nav>
@@ -495,6 +496,56 @@
         </p>
       </div>
     </section>
+
+    <section id="photos" class="section scrollspy">
+            <h3 class="page-title white-text teal">Photos</h3>
+            <div class="container">
+              <div class="row">
+                <div class="col s12 m6">
+                  <div class="card">
+                    <div class="card-content">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                      <!-- <p><span class="card-title"><a href="http://startupinstitute.com" target="_blank" class="teal-text hoverline">Student Choice Award</a></span></p>
+                      <p class="brown-text">Startup Institute - Full Time Web Development | April 2017</p>
+                      <ul>
+                        <li>Awarded by students in the Full-Time Web Development track to one instructor as recognition for "outstanding teaching, listening, mentoring."</li>
+                      </ul> -->
+                    </div>
+                  </div>
+                </div>
+                <div class="col s12 m6">
+                  <div class="card">
+                    <div class="card-content">
+                      <p><span class="card-title"><a href="https://wespire.com" target="_blank" class="teal-text hoverline">Inspired By You Award</a></span></p>
+                      <p class="brown-text">WeSpire | June 2016</p>
+                      <ul>
+                        <li>Quarterly award given to a team member who exemplifies WeSpire's purpose, vision, and values, goes above and beyond in their role to make a particularly positive impact on the company.</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              </div>
+            </div>
+          </section>
+
+
+
+
   </main>
 
 
