--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+
+<!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!-- Bootstrap -->
+
   <!-- Materialize - Compiled and minified CSS-->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
 
@@ -290,7 +296,7 @@
           <!-- 1-->
           <div class="col s12 m6 l4">
             <div class="card medium">
-                <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/.jpg" class="activator"></div>
+                <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/react.png" class="activator"></div>
                 <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
                   <p>Music web app to create your favourite music playlist.</p>
                 </div>
@@ -309,7 +315,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
 
-              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/.jpg" class="activator"></div>
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/slack.png" class="activator"></div>
               <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
                 <p>Music web app to create your favourite music playlist.</p>
               </div>
@@ -330,7 +336,7 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
 
-              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/.jpg" class="activator"></div>
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/mongodb.png" class="activator"></div>
               <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
                 <p>Music web app to create your favourite music playlist.</p>
               </div>
@@ -499,49 +505,53 @@
 
     <section id="photos" class="section scrollspy">
             <h3 class="page-title white-text teal">Photos</h3>
-            <div class="container">
+              <div class=" container fluid">
+
+              <body>
+              <!-- Photo Grid -->
               <div class="row">
-                <div class="col s12 m6">
-                  <div class="card">
-                    <div class="card-content">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                      <!-- <p><span class="card-title"><a href="http://startupinstitute.com" target="_blank" class="teal-text hoverline">Student Choice Award</a></span></p>
-                      <p class="brown-text">Startup Institute - Full Time Web Development | April 2017</p>
-                      <ul>
-                        <li>Awarded by students in the Full-Time Web Development track to one instructor as recognition for "outstanding teaching, listening, mentoring."</li>
-                      </ul> -->
-                    </div>
-                  </div>
+                <div class="column">
+                  <img src="/static/img/pic1.png"  style="width:100%">
+                  <img src="/static/img/pic2.png" style="width:100%">
+                  <img src="/static/img/pic3.png"  style="width:100%">
+                  <img src="/static/img/pic4.png" style="width:100%">
+                  <img src="/static/img/pic5.png"  style="width:100%">
+                  <img src="/static/img/pic6.png" style="width:100%">
+                  <img src="/static/img/pic7.png" style="width:100%">
                 </div>
-                <div class="col s12 m6">
-                  <div class="card">
-                    <div class="card-content">
-                      <p><span class="card-title"><a href="https://wespire.com" target="_blank" class="teal-text hoverline">Inspired By You Award</a></span></p>
-                      <p class="brown-text">WeSpire | June 2016</p>
-                      <ul>
-                        <li>Quarterly award given to a team member who exemplifies WeSpire's purpose, vision, and values, goes above and beyond in their role to make a particularly positive impact on the company.</li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                <div class="column">
+                  <img src="/static/img/pic7.png" style="width:100%">
+                  <img src="/static/img/pic6.png" style="width:100%">
+                  <img src="/static/img/pic5.png" style="width:100%">
+                  <img src="/static/img/pic4.png" style="width:100%">
+                  <img src="/static/img/pic3.png" style="width:100%">
+                  <img src="/static/img/pic2.png" style="width:100%">
+                  <img src="/static/img/pic1.png" style="width:100%">
 
+                </div>
+                <div class="column">
+                  <img src="/static/img/pic1.png"  style="width:100%">
+                  <img src="/static/img/pic2.png" style="width:100%">
+                  <img src="/static/img/pic3.png"  style="width:100%">
+                  <img src="/static/img/pic4.png" style="width:100%">
+                  <img src="/static/img/pic5.png"  style="width:100%">
+                  <img src="/static/img/pic6.png" style="width:100%">
+                  <img src="/static/img/pic7.png" style="width:100%">
+                </div>
+                <div class="column">
+                  <img src="/static/img/pic7.png" style="width:100%">
+                  <img src="/static/img/pic6.png" style="width:100%">
+                  <img src="/static/img/pic5.png" style="width:100%">
+                  <img src="/static/img/pic4.png" style="width:100%">
+                  <img src="/static/img/pic3.png" style="width:100%">
+                  <img src="/static/img/pic2.png" style="width:100%">
+                  <img src="/static/img/pic1.png" style="width:100%">
+
+                </div>
               </div>
             </div>
-          </section>
+
+    </section>
 
 
 
