Added Project Live Link - Hosted on AWS, added High school detail

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
               <li>Cloud Computing</li>
 
             </ul>
-            <h6>Recent Projects</h6>
-            <li> <a href="https://github.com/RohitoOo/Music-Playlist-Crud-App">Crud Application</a></li>
+            <h6>Recent Projects : </h6>
+            <li> <a href="http://18.222.46.252:3000/" target="_blank">Crud Application</a> </li>
             <li><a href="https://github.com/RohitoOo/React_Portfolio">React Portfolio Page</a></li>
             <li> <a href="https://github.com/RohitoOo/Crud_WebApplication">Crud Application</a></li>
             <li><a href="https://github.com/RohitoOo/ReactJs_ToDoApp">React To Do List</a></li>
@@ -484,6 +484,7 @@
                 <p class="brown-text">Hamilton, ON | 2005 - 2007</p>
                 <ul>
                   <li>High School Diploma</li>
+                  <li>Top Male Athelete 2005 - 2006 </li>
                 </ul>
               </div>
             </div>
