--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 
             </ul>
             <h6>Recent Projects : </h6>
-            <li> <a href="http://18.222.46.252:3000/" target="_blank">Crud Application</a> </li>
+            <li> <a href="http://18.222.46.252:3000/" target="_blank">Music Playlist Crud Application W/ Jade</a> </li>
             <li><a href="https://github.com/RohitoOo/React_Portfolio">React Portfolio Page</a></li>
-            <li> <a href="https://github.com/RohitoOo/Crud_WebApplication">Crud Application</a></li>
+            <li> <a href="http://18.191.184.100:3000/users/login">Music Playlist W/ Listen Functionality </a></li>
             <li><a href="https://github.com/RohitoOo/ReactJs_ToDoApp">React To Do List</a></li>
             <li><a href="https://github.com/RohitoOo/React_Project_3">React Group Project</a></li>
             <li><a href="https://github.com/RohitoOo/Swaggy">Food Delivery Group Project</a></li>
