--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 
-<!-- Bootstrap -->
+  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<!-- Bootstrap -->
+  <!-- Bootstrap -->
 
   <!-- Materialize - Compiled and minified CSS-->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css">
@@ -139,8 +139,7 @@
         <p>I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns, I've never stopped engaging my passion to help others and solve problems.</p>
         <p>As a web developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.</p>
         <p><strong>Current Focus</strong>:&nbsp;<a aria-label="Navigate to " href="">MongoDB</a>&nbsp;//&nbsp;<a aria-label="Navigate to " href="">ExpressJs</a>&nbsp //&nbsp<a aria-label="Navigate to  &quot;Scalable CSS&quot;" href=""> ReactJs </a>&nbsp//&nbsp
-          <a
-            aria-label="Navigate to " href="">NodeJs</a>&nbsp;</p>
+          <a aria-label="Navigate to " href="">NodeJs</a>&nbsp;</p>
       </div>
       <!-- change -->
 
@@ -179,7 +178,7 @@
             </ul>
             <h6>Recent Projects : </h6>
             <li> <a href="http://18.222.46.252:3000/" target="_blank">Music Playlist Crud Application W/ Jade</a> </li>
-            <li><a href="https://github.com/RohitoOo/React_Portfolio" target="_blank">React Portfolio Page</a></li>
+            <li><a href="http://206.189.140.144:3001/" target="_blank">React Portfolio Page</a></li>
             <li> <a href="http://206.189.134.50:3000/users/login" target="_blank">Music Playlist W/ Listen Functionality </a></li>
             <li><a href="http://159.89.169.135/" target="_blank">React To Do List</a></li>
             <li><a href="https://github.com/RohitoOo/React_Project_3" target="_blank">React Group Project</a></li>
@@ -204,11 +203,11 @@
             <p><em class="grey-text">TFI International Inc. is a Canadian transport and logistics company based in Montreal, Quebec. It operates across Canada through 4 business segments, and in the United States. It has Canada's largest LTL business, largest trucking fleet and ranked top 5 in terms of revenue among North American LTL carriers . Its trucking fleet consists of ~6700 power units and ~12000 trailers.</em></p>
             <h6>Responsibilities</h6>
             <ul>
-            <li>Meticulously create, update, analyze and monitor daily logistics reports for Samsung and Saputo Dairy Products.</li>
-            <li>Communicate information with all stakeholders to ensure desired logistics objectives, priorities and schedules are met.</li>
-            <li>Obtain rate quotes and negotiate terms with freight forwarders and 3rd party freight brokers. </li>
-            <li>Coordinate daily driver runs within Ontario using IBM's AS400.</li>
-            <li>Communicate with customs brokers, clients and shippers to facilitate smooth movement across the international borders.</li>
+              <li>Meticulously create, update, analyze and monitor daily logistics reports for Samsung and Saputo Dairy Products.</li>
+              <li>Communicate information with all stakeholders to ensure desired logistics objectives, priorities and schedules are met.</li>
+              <li>Obtain rate quotes and negotiate terms with freight forwarders and 3rd party freight brokers. </li>
+              <li>Coordinate daily driver runs within Ontario using IBM's AS400.</li>
+              <li>Communicate with customs brokers, clients and shippers to facilitate smooth movement across the international borders.</li>
             </ul>
             <h6>Accomplishments</h6>
             <ul>
@@ -229,10 +228,10 @@
             <p><em class="grey-text"> TransGroup Global Logistics was founded with a single mission – to be the Future of Transport Logistics by bringing tomorrow’s supply chain technologies and best practices to their customers today. They are dedicated to developing the most advanced and flexible logistics software tools available.</em></p>
             <h6>Responsibilities</h6>
             <ul>
-            <li>Refined and executed prearranged strategy with clients, maintained ongoing communication and facilitated solutions to address their individual logistics concerns.</li>
-            <li>Negotiated rate quotes with 3rd party carriers. (LTL and Truckloads)</li>
-            <li>Coordinated supply chain projects within Canada.</li>
-            <li>Worked with 3PL (3rd Party Logistics) clients to fulfill storage and distribution needs across Canada in a timely fashion.</li>
+              <li>Refined and executed prearranged strategy with clients, maintained ongoing communication and facilitated solutions to address their individual logistics concerns.</li>
+              <li>Negotiated rate quotes with 3rd party carriers. (LTL and Truckloads)</li>
+              <li>Coordinated supply chain projects within Canada.</li>
+              <li>Worked with 3PL (3rd Party Logistics) clients to fulfill storage and distribution needs across Canada in a timely fashion.</li>
             </ul>
           </div>
           <div class="card-action"><span>Nov 2012 - Feb 2014 | Toronto, ON</span></div>
@@ -296,19 +295,22 @@
           <!-- 1-->
           <div class="col s12 m6 l4">
             <div class="card medium">
-                <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/react.png" class="activator"></div>
-                <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
-                  <p>Music web app to create your favourite music playlist.</p>
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/react.png" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
+                <p>Music web app to create your favourite music playlist.</p>
+              </div>
+              <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><strong>NodeJs ExpressJs</strong> backend</li>
+                  <li><strong>MongoDb Mongoose </strong> database</li>
+                  <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
+                  <li><strong>Client-side rendering</strong> via EJS</li>
+                </ul>
+                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://18.222.46.252:3000/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
+                  <a
+                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
-                <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
-                  <ul>
-                    <li><strong>NodeJs ExpressJs</strong> backend</li>
-                      <li><strong>MongoDb Mongoose </strong> database</li>
-                      <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
-                    <li><strong>Client-side rendering</strong> via EJS</li>
-                  </ul>
-                    <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://18.222.46.252:3000/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a><a aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a></div>
-                </div>
+              </div>
             </div>
           </div>
           <!-- 2 -->
@@ -322,11 +324,14 @@
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><strong>NodeJs ExpressJs</strong> backend</li>
-                    <li><strong>MongoDb Mongoose </strong> database</li>
-                    <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
+                  <li><strong>MongoDb Mongoose </strong> database</li>
+                  <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
                   <li><strong>Client-side rendering</strong> via EJS</li>
                 </ul>
-                  <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="https://rohito.com/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a><a aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a></div>
+                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="https://rohito.com/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
+                  <a
+                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                </div>
               </div>
 
 
@@ -343,11 +348,14 @@
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><strong>NodeJs ExpressJs</strong> backend</li>
-                    <li><strong>MongoDb Mongoose </strong> database</li>
-                    <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
+                  <li><strong>MongoDb Mongoose </strong> database</li>
+                  <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
                   <li><strong>Client-side rendering</strong> via EJS</li>
                 </ul>
-                  <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="https://rohito.com/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a><a aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a></div>
+                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="https://rohito.com/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
+                  <a
+                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                </div>
               </div>
 
             </div>
@@ -505,52 +513,52 @@
     </section>
 
     <section id="photos" class="section scrollspy">
-            <h3 class="page-title white-text teal">Photos</h3>
-              <div class=" container fluid">
+      <h3 class="page-title white-text teal">Photos</h3>
+      <div class=" container fluid">
 
-              <body>
-              <!-- Photo Grid -->
-              <div class="row">
-                <div class="column">
-                  <img src="/static/img/pic1.png"  style="width:100%">
-                  <img src="/static/img/pic2.png" style="width:100%">
-                  <img src="/static/img/pic3.png"  style="width:100%">
-                  <img src="/static/img/pic4.png" style="width:100%">
-                  <img src="/static/img/pic5.png"  style="width:100%">
-                  <img src="/static/img/pic6.png" style="width:100%">
-                  <img src="/static/img/pic7.png" style="width:100%">
-                </div>
-                <div class="column">
-                  <img src="/static/img/pic7.png" style="width:100%">
-                  <img src="/static/img/pic6.png" style="width:100%">
-                  <img src="/static/img/pic5.png" style="width:100%">
-                  <img src="/static/img/pic4.png" style="width:100%">
-                  <img src="/static/img/pic3.png" style="width:100%">
-                  <img src="/static/img/pic2.png" style="width:100%">
-                  <img src="/static/img/pic1.png" style="width:100%">
-
-                </div>
-                <div class="column">
-                  <img src="/static/img/pic1.png"  style="width:100%">
-                  <img src="/static/img/pic2.png" style="width:100%">
-                  <img src="/static/img/pic3.png"  style="width:100%">
-                  <img src="/static/img/pic4.png" style="width:100%">
-                  <img src="/static/img/pic5.png"  style="width:100%">
-                  <img src="/static/img/pic6.png" style="width:100%">
-                  <img src="/static/img/pic7.png" style="width:100%">
-                </div>
-                <div class="column">
-                  <img src="/static/img/pic7.png" style="width:100%">
-                  <img src="/static/img/pic6.png" style="width:100%">
-                  <img src="/static/img/pic5.png" style="width:100%">
-                  <img src="/static/img/pic4.png" style="width:100%">
-                  <img src="/static/img/pic3.png" style="width:100%">
-                  <img src="/static/img/pic2.png" style="width:100%">
-                  <img src="/static/img/pic1.png" style="width:100%">
-
-                </div>
-              </div>
+        <body>
+          <!-- Photo Grid -->
+          <div class="row">
+            <div class="column">
+              <img src="/static/img/pic1.png" style="width:100%">
+              <img src="/static/img/pic2.png" style="width:100%">
+              <img src="/static/img/pic3.png" style="width:100%">
+              <img src="/static/img/pic4.png" style="width:100%">
+              <img src="/static/img/pic5.png" style="width:100%">
+              <img src="/static/img/pic6.png" style="width:100%">
+              <img src="/static/img/pic7.png" style="width:100%">
             </div>
+            <div class="column">
+              <img src="/static/img/pic7.png" style="width:100%">
+              <img src="/static/img/pic6.png" style="width:100%">
+              <img src="/static/img/pic5.png" style="width:100%">
+              <img src="/static/img/pic4.png" style="width:100%">
+              <img src="/static/img/pic3.png" style="width:100%">
+              <img src="/static/img/pic2.png" style="width:100%">
+              <img src="/static/img/pic1.png" style="width:100%">
+
+            </div>
+            <div class="column">
+              <img src="/static/img/pic1.png" style="width:100%">
+              <img src="/static/img/pic2.png" style="width:100%">
+              <img src="/static/img/pic3.png" style="width:100%">
+              <img src="/static/img/pic4.png" style="width:100%">
+              <img src="/static/img/pic5.png" style="width:100%">
+              <img src="/static/img/pic6.png" style="width:100%">
+              <img src="/static/img/pic7.png" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="/static/img/pic7.png" style="width:100%">
+              <img src="/static/img/pic6.png" style="width:100%">
+              <img src="/static/img/pic5.png" style="width:100%">
+              <img src="/static/img/pic4.png" style="width:100%">
+              <img src="/static/img/pic3.png" style="width:100%">
+              <img src="/static/img/pic2.png" style="width:100%">
+              <img src="/static/img/pic1.png" style="width:100%">
+
+            </div>
+          </div>
+      </div>
 
     </section>
 
@@ -575,13 +583,13 @@
       $(".button-collapse").sideNav({
         menuWidth: 190, // Default is 240
         edge: 'left', // Choose the horizontal origin
-        closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
+        closeOnClick: true // Closes side-nav on <a> clicks
       });
     });
   </script>
 
 
 
-</body>
+  </body>
 
 </html>
