--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
             <li><a href="http://206.189.140.144:3001/" target="_blank">React Portfolio Page</a></li>
             <li> <a href="http://206.189.134.50:3000/users/login" target="_blank">Music Playlist W/ Listen Functionality </a></li>
             <li><a href="http://159.89.169.135/" target="_blank">React To Do List</a></li>
+            <li><a href="https://github.com/RohitoOo/Swaggy" target="_blank">Mern Stack Project</a></li>
             <li><a href="https://github.com/RohitoOo/React_Project_3" target="_blank">React Group Project</a></li>
-            <li><a href="https://github.com/RohitoOo/Swaggy" target="_blank">Food Delivery Group Project</a></li>
             <li><a href="https://github.com/RohitoOo/PhotoShop_To_HTML" target="_blank">PhotoShop To HTML</a></li>
             <ul>
 
@@ -316,7 +316,6 @@
           <!-- 2 -->
           <div class="col s12 m6 l4">
             <div class="card medium">
-
               <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/slack.png" class="activator"></div>
               <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
                 <p>Music web app to create your favourite music playlist.</p>
@@ -333,8 +332,6 @@
                     aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
-
-
             </div>
           </div>
           <!-- 3 -->
@@ -363,25 +360,20 @@
           <!-- 4 -->
           <div class="col s12 m6 l4">
             <div class="card medium">
-
             </div>
           </div>
           <!-- 5 -->
           <div class="col s12 m6 l4">
             <div class="card medium">
-
             </div>
           </div>
           <!-- 6 -->
           <div class="col s12 m6 l4">
             <div class="card medium">
-
             </div>
           </div>
-
         </div>
       </div>
-
     </section>
 
 
