Added Project Link Hosted on Aws Instance

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <li><a href="http://159.89.169.135/" target="_blank">React To Do List</a></li>
             <li><a href="https://github.com/RohitoOo/Swaggy" target="_blank">Mern Stack Project</a></li>
             <li><a href="https://github.com/RohitoOo/React_Project_3" target="_blank">React Group Project</a></li>
-            <li><a href="https://github.com/RohitoOo/PhotoShop_To_HTML" target="_blank">PhotoShop To HTML</a></li>
+            <li><a href="http://18.221.96.119/" target="_blank">PhotoShop To HTML</a></li>
             <li><a href="http://139.59.27.242:3000/restaurants" target="_blank">ReactJs + ExpressJs</a></li>
             <ul>
 
