Added WhatsApp Contact Method and Changed Images for Project Thumbnails.

--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@
           <!-- 1-->
           <div class="col s12 m6 l4">
             <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/react.png" class="activator"></div>
-              <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
-                <p>Music web app to create your favourite music playlist.</p>
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/crud.png" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">Music Playlist<i class="mdi-navigation-more-vert right"></i></span>
+                <p>Music Web App To Create & Manage A Personalized Music Playlist.</p>
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -309,7 +309,7 @@
                 </ul>
                 <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://18.222.46.252:3000/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
-                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -317,20 +317,22 @@
           <!-- 2 -->
           <div class="col s12 m6 l4">
             <div class="card medium">
-              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/slack.png" class="activator"></div>
-              <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
-                <p>Music web app to create your favourite music playlist.</p>
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/react.png" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">React Application<i class="mdi-navigation-more-vert right"></i></span>
+                <p>Simple MERN Application to fetch data from MonogDb and render on client's page using ReactJs.</p>
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><strong>NodeJs ExpressJs</strong> backend</li>
-                  <li><strong>MongoDb Mongoose </strong> database</li>
-                  <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
-                  <li><strong>Client-side rendering</strong> via EJS</li>
+                  <li><strong>MongoDb & Mongoose </strong> database</li>
+                  <li><strong>ExpressJs</strong> NodeJs framework</li>
+                  <li><strong>ReactJs</strong> frontend</li>
+                  <li><strong>NodeJs</strong> backend</li>
+                  <li><strong>Concurrently</strong> running multiple commands</li>
+                  <li><strong>Mongoose </strong> object modeling in an asynchronous environment</li>
                 </ul>
-                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="https://rohito.com/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
+                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://139.59.27.242:3000/restaurants" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
-                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/React_Meets_Express" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
@@ -339,9 +341,9 @@
           <div class="col s12 m6 l4">
             <div class="card medium">
 
-              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/mongodb.png" class="activator"></div>
-              <div class="card-content"><span class="card-title activator teal-text hoverline">Crud App<i class="mdi-navigation-more-vert right"></i></span>
-                <p>Music web app to create your favourite music playlist.</p>
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/crud1.png" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">Personal Ipod<i class="mdi-navigation-more-vert right"></i></span>
+                <p>Manage Your Cloud Playlist</p>
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
@@ -350,9 +352,9 @@
                   <li>User <strong>authentication</strong> via Passport & Bcryptjs</li>
                   <li><strong>Client-side rendering</strong> via EJS</li>
                 </ul>
-                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="https://rohito.com/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
+                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://206.189.134.50:3000/users/login" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
-                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication/blob/master/package.json" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Crud_WebApplication.git" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
 
@@ -361,6 +363,24 @@
           <!-- 4 -->
           <div class="col s12 m6 l4">
             <div class="card medium">
+              <div class="card-image waves-effect waves-block waves-light"><img alt="Screenshot of Crud web app" src="static/img/mongodb.png" class="activator"></div>
+              <div class="card-content"><span class="card-title activator teal-text hoverline">React Application<i class="mdi-navigation-more-vert right"></i></span>
+                <p>React Application To Display Social Pages.</p>
+              </div>
+              <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
+                <ul>
+                  <li><strong>MongoDb & Mongoose </strong> database</li>
+                  <li><strong>ExpressJs</strong> NodeJs framework</li>
+                  <li><strong>ReactJs</strong> frontend</li>
+                  <li><strong>NodeJs</strong> backend</li>
+                  <li><strong>Concurrently</strong> running multiple commands</li>
+                  <li><strong>Mongoose </strong> object modeling in an asynchronous environment</li>
+                </ul>
+                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://139.59.27.242:3000/restaurants" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
+                  <a
+                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/React_Meets_Express" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                </div>
+              </div>
             </div>
           </div>
           <!-- 5 -->
@@ -452,8 +472,12 @@
               <div class="col s4 m2"><img alt="" src="static/img/heroku.png" class="responsive-img">Heroku</div>
               <div class="col s4 m2"><img alt="" src="static/img/aws.png" class="responsive-img">AWS</div>
               <div class="col s4 m2"><img alt="" src="static/img/google-cloud.png" class="responsive-img">Google Cloud</div>
+              <div class="col s4 m2"><img alt="" src="static/img/digitalOcean.png" class="responsive-img">Digital Ocean</div>
               <div class="col s4 m2"><img alt="" src="static/img/slack.png" class="responsive-img">Slack</div>
               <div class="col s4 m2"><img alt="" src="static/img/trello.png" class="responsive-img">Trello</div>
+              <div class="col s4 m2"><img alt="" src="static/img/sourceTree.png" class="responsive-img">Source Tree</div>
+
+
 
             </div>
           </div>
@@ -498,10 +522,15 @@
       <div class="container">
         <p><a aria-label="Email Rohit" href="mailto:rohit.m.bhambhani@gmail.com" data-position="top" data-tooltip="Email Rohito" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-envelope"></i><a alt="" href="mailto:rohit.m.bhambhani@gmail.com" class="hoverline">Rohit.m.Bhambhani@gmail.com</a></a>
         </p>
+        </p>
+        <p><a aria-label="View Rohit on LinkedIn" href="https://api.whatsapp.com/send?phone=16479651186" target="_blank" data-position="top" data-tooltip="WhatsApp Rohito" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-whatsapp"></i><a alt="" href="https://api.whatsapp.com/send?phone=16479651186" target="_blank" class="hoverline">Direct Message Me On WhatsApp</a></a>
+        </p>
         <p><a aria-label="View Rohit on GitHub" href="https://github.com/RohitoOo" target="_blank" data-position="top" data-tooltip="View Rohito's GitHub" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i><a alt="" href="https://github.com/RohitoOo" class="hoverline">github.com/RohitoOo</a></a>
         </p>
-        <p><a aria-label="View Rohit on LinkedIn" href="http://linkedin.com/in/rohitbhambhani" target="_blank" data-position="top" data-tooltip="View Rohit on LinkedIn" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-linkedin"></i><a alt="" href="http://linkedin.com/in/rohitbhambhani" class="hoverline">linkedin.com/in/RohitBhambhani</a></a>
-        </p>
+        <p><a aria-label="View Rohit on LinkedIn" href="http://linkedin.com/in/rohitbhambhani" target="_blank" data-position="top" data-tooltip="View Rohito on LinkedIn" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-linkedin"></i><a alt="" href="http://linkedin.com/in/rohitbhambhani" class="hoverline">linkedin.com/in/RohitBhambhani</a></a>
+
+
+
       </div>
     </section>
 
