Added Back-End Skill

--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
               <div class="col s4 m2"><img alt="" src="static/img/nodejs.png" class="responsive-img">NodeJs</div>
               <div class="col s4 m2"><img alt="" src="static/img/express-js.png" class="responsive-img">ExpressJs</div>
               <div class="col s4 m2"><img alt="" src="static/img/mongodb.png" class="responsive-img">MongoDB</div>
+              <div class="col s4 m2"><img alt="" src="static/img/robo3t.png" class="responsive-img">Robo3T</div>
             </div>
           </div>
         </div>
