Edited Date for Full Stack JavaScript Program

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <li> <a href="http://18.222.46.252:3000/" target="_blank">Music Playlist Crud Application</a> </li>
             </ul>
           </div>
-          <div class="card-action"><span>Feb 2014 - March 2018 | Toronto, ON</span></div>
+          <div class="card-action"><span>March 2018 - June 2018</span></div>
         </div>
 
         <div class="card">
