--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
               <h6> <a href="#projects">Recent Projects</a> </h6>
                 <li> <a href="http://206.189.134.50:3000/users/login" target="_blank">Music Crud Application </a></li>
                 <li> <a href="http://13.58.210.205/" target="_blank">React To Do List</a></li>
-                <li> <a href="https://github.com/RohitoOo/Mern_Shopping_List" target="_blank">Mern Stack Project</a></li>
+                <li> <a href="http://18.216.26.98:3000/" target="_blank">Mern Stack Project</a></li>
                 <li> <a href="http://18.221.96.119/" target="_blank">PhotoShop To HTML</a></li>
                 <li> <a href="http://18.222.47.54:3000/" target="_blank">React Responsive Navbar Using Flexbox </a></li>
                 <li> <a href="http://18.222.46.252:3000/" target="_blank">Music Playlist Crud Application</a> </li>
@@ -187,6 +187,8 @@
               <li>Communicate with customs brokers, clients and shippers to facilitate smooth movement across the international borders.</li>
             </ul>
             <h6>Accomplishments</h6>
+            <li>Managed 5 Junior Supply Chain Coordinators, Reporting Directly to Samsung's Supply Chain Head Of Operations.</li>
+
             <ul>
 
             </ul>
@@ -342,12 +344,12 @@
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><strong>MongoDb & Mongoose </strong> database</li>
+                  <!-- <li><strong>MongoDb & Mongoose </strong> database</li>
                   <li><strong>ExpressJs</strong> NodeJs framework</li>
                   <li><strong>ReactJs</strong> frontend</li>
                   <li><strong>NodeJs</strong> backend</li>
                   <li><strong>Concurrently</strong> running multiple commands</li>
-                  <li><strong>Mongoose </strong> object modeling in an asynchronous environment</li>
+                  <li><strong>Mongoose </strong> object modeling in an asynchronous environment</li> -->
                 </ul>
                 <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://139.59.27.242:3000/restaurants" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
@@ -365,16 +367,18 @@
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <!-- <li><strong>MongoDb & Mongoose </strong> database</li>
-                  <li><strong>ExpressJs</strong> NodeJs framework</li>
+                <li><strong>MongoDb</strong> database</li>
                   <li><strong>ReactJs</strong> frontend</li>
+                  <li><strong>ReactJs</strong>react-redux / reactstrap </li>
+                  <li><strong>React UI / UX</strong> React Transitions</li>
+                  <li><strong>Redux</strong> frontend State Management</li>
+                  <li><strong>ExpressJs</strong> NodeJs framework</li>
                   <li><strong>NodeJs</strong> backend</li>
-                  <li><strong>Concurrently</strong> running multiple commands</li>
-                  <li><strong>Mongoose </strong> object modeling in an asynchronous environment</li> -->
+                  <li><strong>Concurrently</strong> running Front And Back End Servers</li>
                 </ul>
-                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://139.59.27.242:3000/restaurants" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
+                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://18.216.26.98:3000/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
-                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/React_Meets_Express" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Mern_Shopping_List" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
