--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
         </blockquote>
         <p>I’ve always sought out opportunities and challenges that are meaningful to me. Although my professional path has taken many twists and turns, I've never stopped engaging my passion to help others and solve problems.</p>
         <p>As a web developer, I enjoy using my obsessive attention to detail, my unequivocal love for making things, and my mission-driven work ethic to literally change the world. That's why I’m excited to make a big impact at a high growth company.</p>
-        <h4><strong>Current Focus</strong>:&nbsp&nbsp MongoDB &nbsp&nbsp ExpressJs &nbsp&nbsp ReactJs &nbsp&nbsp
-          NodeJs&nbsp&nbsp </h4>
+        <h6><strong>Current Focus: JavaScript Mongo Express React Redux Node  </strong></h6>
       </div>
       <!-- change -->
 
@@ -367,7 +366,7 @@
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                <li><strong>MongoDb</strong> database</li>
+                  <li><strong>MongoDb</strong> database</li>
                   <li><strong>ReactJs</strong> frontend</li>
                   <li><strong>ReactJs</strong>react-redux / reactstrap </li>
                   <li><strong>React UI / UX</strong> React Transitions</li>
@@ -392,16 +391,18 @@
               </div>
               <div class="card-reveal"><span class="card-title brown-text">Technology<i class="mdi-navigation-close right"></i></span>
                 <ul>
-                  <li><strong>MongoDb & Mongoose </strong> database</li>
-                  <li><strong>ExpressJs</strong> NodeJs framework</li>
+                  <li><strong>MongoDb</strong> database</li>
                   <li><strong>ReactJs</strong> frontend</li>
+                  <li><strong>ReactJs</strong>react-redux / reactstrap </li>
+                  <li><strong>React UI / UX</strong> React Transitions</li>
+                  <li><strong>Redux</strong> frontend State Management</li>
+                  <li><strong>ExpressJs</strong> NodeJs framework</li>
                   <li><strong>NodeJs</strong> backend</li>
-                  <li><strong>Concurrently</strong> running multiple commands</li>
-                  <li><strong>Mongoose </strong> object modeling in an asynchronous environment</li>
+                  <li><strong>Concurrently</strong> running Front And Back End Servers</li>
                 </ul>
-                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
+                <div class="card-action"><a aria-label="Visit Code Hosted On Cloud Server" href="http://18.216.26.98:3000/" target="_blank" data-position="top" data-tooltip="View Online" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-external-link"></i></a>
                   <a
-                    aria-label="Visit the GitHub repo for the Crud project" href="" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
+                    aria-label="Visit the GitHub repo for the Crud project" href="https://github.com/RohitoOo/Mern_Shopping_List" target="_blank" data-position="top" data-tooltip="View Source" class="btn-floating btn-large waves-effect waves-light brown tooltipped"><i class="fa fa-github"></i></a>
                 </div>
               </div>
             </div>
